# Penny-Game

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy-to-pages.yml  package-backend-docker-image.yml  package-backend-docker-images.yml  package-devcontainer-docker-image.yml  package-docker-images.yml  package-frontend-docker-image.yml  package-frontend-docker-images.yml  super-linter.yml
api/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
api/app/: __init__.py  constants.py  dependencies.py  game_logic.py  main.py  models.py  response_builder.py  routes.py  schemas.py  validators.py  websocket.py
api/app/application/: __init__.py  game_service.py
api/app/domain/: __init__.py  aggregate.py  constants.py  events.py
api/app/infrastructure/: __init__.py  broadcaster.py  event_store.py
api/tests/: __init__.py  conftest.py  test_aggregate.py  test_events.py  test_game_service.py
front-end/: .dockerignore  .gitignore  .prettierrc  Dockerfile  astro.config.mjs  nginx.conf  package-lock.json  package.json  tsconfig.json
front-end/locales/: en.js  fr.js
front-end/public/scripts/: api.js  bilingual-terms.js  dnd.js  dom.js  game-actions.js  game-board.js  main.js  time-utils.js  utility.js  view-manager.js  websocket.js
front-end/src/: api.ts  config.ts  game.ts  main.ts
front-end/src/components/: Footer.astro  GameBoard.astro  GameControls.astro  GameInfo.astro  (+6 more)
super-linter-output/: super-linter-summary.md
(+20 files in other folders)
